# file_system_analysis

./: README.md  pyproject.toml
config/: config.example.yaml
docs/: architecture.md  configuration.md  dependency_compatibility.md  langgraph_workflow.md  model_version_review.md  mvp_implementation.md  supported_file_readers.md  ui_specification.md  yaml_configuration_guide.md
scripts/: build_exe.ps1  run_app.ps1
src/file_system_analysis/: main.py
src/file_system_analysis/application/: __init__.py  file_analysis_service.py  summarization_service.py
src/file_system_analysis/config/: __init__.py  settings.py  yaml_loader.py
src/file_system_analysis/domain/: __init__.py  exceptions.py  models.py
src/file_system_analysis/infrastructure/document_readers/: __init__.py  base_reader.py  csv_reader.py  office_readers.py  reader_factory.py  text_reader.py
src/file_system_analysis/infrastructure/filesystem/: __init__.py  metadata_reader.py  scanner.py
src/file_system_analysis/infrastructure/llm/: __init__.py  model_factory.py
src/file_system_analysis/ui/: __init__.py  app.py  file_table_model.py  main_window.py
tests/integration/: test_file_analysis_service.py
tests/unit/: test_scanner_and_readers.py  test_summarization_service.py
